a slight update to the css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -827,7 +827,7 @@ section {
   margin-top: 15px;
 }
 .team .member .social a:hover {
-  color: #eb5d1e;
+  color: #598392;
 }
 .team .member .social i {
   font-size: 18px;
